# ranty

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.html  about.hbs  book.toml
.github/workflows/: ci.yml  sync-ranty-js.yml
benchmarks/: run-hyperfine.sh
docs/: 404.html  cli.html  compiler-messages.html  getting-started.html  glossary.html  highlight.js  index.html  intro.html  language.html  modules.html  rant-3-vs-4.html  rant-3-vs-ranty.html  runtime.html  searchindex.js  stdlib.html  styles.css  toc.html  toc.js
docs-src/: SUMMARY.md  cli.md  compiler-messages.md  getting-started.md  glossary.md  intro.md  language.md  modules.md  rant-3-vs-4.md  rant-3-vs-ranty.md  runtime.md  stdlib.md
docs-src/_tables/: selector-modes.md
docs-src/getting-started/: tutorial.md
docs-src/language/: accessors.md  blocks.md  comments.md  conditional-expressions.md  data-types.md  escape-sequences.md  functions.md  keywords.md  operators.md  output-modifiers.md  text.md
docs-src/runtime/: attributes.md  data-sources.md  embedding-in-rust.md  formatters.md  module-resolvers.md  number-formatter.md  whitespace-formatter.md
docs-src/stdlib/: assertion.md  boolean.md  collections.md  comparison.md  constants.md  control-flow.md  conversion.md  formatting.md  general.md  generators.md  math.md  strings.md  verification.md
docs/getting-started/: tutorial.html
docs/language/: accessors.html  blocks.html  comments.html  conditional-expressions.html  data-types.html  escape-sequences.html  functions.html  keywords.html  operators.html  output-modifiers.html  text.html
docs/runtime/: attributes.html  case-formatter.html  data-sources.html  embedding-in-rust.html  formatters.html  module-resolvers.html  number-formatter.html  whitespace-formatter.html
docs/stdlib/: assertion.html  boolean.html  collections.html  comparison.html  constants.html  control-flow.html  conversion.html  formatting.html  general.html  generators.html  math.html  strings.html  verification.html
docs/theme/: custom.css
examples/: hello_rant.rs  hello_ranty.rs
parity/ranty-js/: contract.json
src/: convert.rs  data.rs  func.rs  gc.rs  gc_tests.rs  lang.rs  lib.rs  modres.rs  rng.rs  selector.rs  string.rs  util.rs  value.rs  value_eq.rs  var.rs
src/collections/: list.rs  map.rs  mod.rs  range.rs  tuple.rs
src/compiler/: lexer.rs  message.rs  mod.rs  parser.rs  reader.rs
src/format/: case.rs  mod.rs  num.rs  ws.rs
src/runtime/: error.rs  intent.rs  mod.rs  output.rs  (+2 more)
tests/: attribute_keyword_tests.rs  block_expansion_tests.rs  cli_tests.rs  conditionals_tests.rs  control_flow_tests.rs  lazy_tests.rs  match_selector_tests.rs  module_tests.rs  output_behavior_tests.rs  prototype_tests.rs  runtime_tests.rs  stdlib_surface_tests.rs
theme/: highlight.js
tools/: build_docs.py  check_docs_examples.py  validate_docs_links.py
xtask/: Cargo.toml
xtask/src/: main.rs  parity.rs
(+111 files in other folders)
